// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package xo;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/trylotus/connectors/xo";


message PaidDM {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	string userId = 5;
	string denom = 6;
	bytes amount = 7; // uint256
}

message RoleAdminChanged {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes role = 5;
	bytes previousAdminRole = 6;
	bytes newAdminRole = 7;
}

message SBTUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	string postId = 5;
}

message NewGoodVibes {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	string postId = 5;
}

message Post {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes poster = 5;
	string postId = 6;
}

message RoleGranted {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes role = 5;
	bytes account = 6;
	bytes sender = 7;
}

message Initialized {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	uint64 version = 5;
}

message NewMutualLike {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	string myId = 5;
	string targetId = 6;
}

message RoleRevoked {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes role = 5;
	bytes account = 6;
	bytes sender = 7;
}

message Swiped {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes sender = 5;
	string swipedUserId = 6;
}
